--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.24.2"
-  },
-  "dependencies": {
+    "@playwright/test": "^1.24.2",
     "dotenv": "^16.0.1"
-  }
+  },
+  "dependencies": {}
 }
